# kbd-monitor

./: .clang-format  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt
example/KeyPrinter/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/include/kbd_monitor/: KeyboardMonitor.hpp
lib/src/: FileDescriptor.cpp  FileDescriptor.hpp  KeyboardMonitor.cpp
